# zentinel-agent-python-sdk

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
docs/: api.md  configuration.md  examples.md  getting-started.md  index.md  quickstart.md
examples/: body_inspection_agent.py  configurable_agent.py  guardrail_agent.py  simple_agent.py
src/sentinel_agent_sdk/: __init__.py  agent.py  decision.py  protocol.py  request.py  response.py  runner.py
src/zentinel_agent_sdk/: __init__.py  agent.py  decision.py  protocol.py  request.py  response.py  runner.py
tests/: test_protocol_conformance.py  test_sdk.py
tests/integration/: __init__.py  test_integration.sh  test_protocol_wire.py
tests/integration/agents/: __init__.py  blocking_agent.py  echo_agent.py  header_mutation_agent.py
