[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zentinel-agent-sdk"
version = "0.2.0"
description = "Python SDK for building Zentinel agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Raskell", email = "dev@raskell.io" }
]
keywords = ["zentinel", "agent", "proxy", "security", "grpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "grpcio>=1.60.0",
]

[project.optional-dependencies]
grpc-tools = [
    "grpcio-tools>=1.60.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.urls]
Homepage = "https://github.com/zentinelproxy/zentinel-agent-python-sdk"
Documentation = "https://github.com/zentinelproxy/zentinel-agent-python-sdk#readme"
Repository = "https://github.com/zentinelproxy/zentinel-agent-python-sdk"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zentinel_agent_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
